# Training-for-Trading-Agents-Architecture

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  quickstart.sh  verify_installation.py
agents/: backtester.md  data-pipeline-manager.md  discussion-facilitator.md  feature-engineer.md  market-microstructure-analyst.md  ml-model-engineer.md  model-trainer.md  risk-manager.md  signal-evaluator.md  smc-pattern-recognizer.md  trading-coordinator.md
config/: backtest_config.yaml  evaluation_framework.yaml  feature_config.yaml  microstructure_config.yaml  ml_config.yaml  risk_config.yaml  signal_config.yaml  smc_config.yaml
examples/: basic_workflow.py  checkpointing_demo.py  parallel_execution.py
knowledge/: ACADEMIC_KNOWLEDGE_BASE.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: trading-orchestrator.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: __init__.py  test_agents.py  test_graph.py
trading_orchestrator/: __init__.py  cli.py  config.py  graph.py  llm_factory.py  logging_config.py  state.py
trading_orchestrator/agents/: __init__.py  base.py  data_engineer.py  ml_engineer.py  risk_manager.py  signal_evaluator.py  smc_analyst.py  supervisor.py  validation_agent.py
