[tool.poetry]
name = "quant-trading-orchestrator"
version = "0.1.0"
description = "LangGraph-based multi-agent orchestration for quantitative trading bot development"
authors = ["Trading Bot Team"]
readme = "README.md"
packages = [{include = "trading_orchestrator"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
lightgbm = "^4.3.0"
scikit-learn = "^1.4.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
rich = "^13.7.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.3.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
ipython = "^8.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
